testing/compilation_error/main.cpp
#include "header.h"

int main() {
	myFunc();
	return 0;
}